2004-01-14  Atsushi Enomoto <atsushi@ximian.com>

	* Added SchemaDataValueType.cs.
	* BuiltInDatatype.cs, XmlSchemaDatatype.cs : Adde ParseValueType() on
	  all derived datatype classes.
	* XmlSchemaComplexType.cs : Fixed ContentType value for simple types.
	  Errata-considered simple content derivation check and simple content
	  restriction should check this too.

2004-01-13  Jackson Harper <jackson@ximian.com>

	* XmlSchemaComplexType.cs: Comment out line that was breaking the build.
	
2004-01-13  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchemaSimpleTypeUnion.cs : The same reason as the previous patch.
	* XmlSchemaComplexType.cs : Now it handles ContentTypeParticle and 
	  ContentType much more presise than before.
	* XmlSchemaElement.cs :
	  Simplified property handling for reference element.

2004-01-13  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchema.cs, XmlSchemaComplexType.cs, XmlSchemaElement.cs :
	  Invalid attribute should raise an error, not a warning.

2004-01-13  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchemaObject.cs : Fixed error() not to set severity as Warning.
	* ValidationHandler.cs,
	  XmlSchemaSet.cs,
	  XmlSchemaCollection.cs : Throw exception only in case of errors.
	* XmlSchemaCollection.cs : Remove schema from schemaset if exist.
	  (It might not be good to use schemaset, but keep for a while)
	* XmlSchemaContent.cs,
	  XmlSchemaComplexContentExtension.cs,
	  XmlSchemaComplexContentRestriction.cs,
	  XmlSchemaSimpleContentExtension.cs,
	  XmlSchemaSimpleContentRestriction.cs,
	  : added GetBaseTypeName() and GetParticle() (not used yet).

2004-01-11  Atsushi Enomoto  <atsushi@ximian.com>

	* BuiltInDatatype.cs : internal type should not appear in protected
	  members' signature.

2004-01-11  David Sheldon <dave-mono@earth.li>

  * BuiltInDatatype.cs : Added XsdOrdering enum, and Compare methods
   to the data-types. Changed AllowedFacets to be a bitfield.
  
  * XmlSchemaFacet.cs : Added Facet enumeration to represent bitfield.
