@@ -1,5 +1,11 @@
 2004-01-14  Atsushi Enomoto <atsushi@ximian.com>
 
+	* XmlSchemaComplexType.cs : forgot to commit ;)
+	* XmlSchemaUtil.cs : Fixed IsSchemaDatatypeEquals() to return false
+	  for comparison between ID and IDREF.
+
+2004-01-14  Atsushi Enomoto <atsushi@ximian.com>
+
 	* Added SchemaDataValueType.cs.
 	* BuiltInDatatype.cs, XmlSchemaDatatype.cs : Adde ParseValueType() on
 	  all derived datatype classes.
